[package]
name = "GSL-sys"
version = "4.0.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>",
           "Christophe Troestler <christophe.troestler@umons.ac.be>"]

description = "A rust binding for the GSL (the GNU scientific library)"
repository = "https://github.com/GuillaumeGomez/rust-GSL"
documentation = "https://docs.rs/crate/GSL-sys/"
readme = "README.md"
keywords = ["mathematics", "library", "GSL"]
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
bindgen = "0.71"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.15"

[lib]
name = "gsl_sys"
crate-type = ["dylib", "rlib"]
